--- a/index.html
+++ b/index.html
@@ -1,13 +1,123 @@
  <!DOCTYPE html>
- <html lang="en">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    
-<title>About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="renderer" content="webkit">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="style.css">
+    <title>陳其茂創作展</title>
 </head>
 
 <body>
-    <a href="pages/page1.html">abc</a>
+    <header>
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <h1>一片鄉土、一縷情懷：陳其茂創作展</h1>
+            </div>
+        </div>
+    </header>
+    
+    <section>
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-12">
+                <img src="曉.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-12">
+                <h1>　</h1>
+                <h1>陳其茂（1926-2005）</h1>
+                <h1>　</h1>
+                <p>被譽為台灣現代版畫的拓荒者</p>
+                <h1>　</h1>
+                <p>作品深受北歐版畫的影響，呈現一種森林詩意的寧靜，以台灣農村為題材的作品，也對日後新一代的年輕版畫家產生影響。</p>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <h1>　</h1>
+                <h1>展期</h1>
+                <h1>　</h1>
+                <p> 2017/6/28-9/16</p>
+                <h1>　</h1>
+                <h1>地點</h1>
+                <h1>　</h1>
+                <p> 至善藝文中心</p>                
+            </div>
+        </div>
+    </section>
+    <section>
+       <h1>獲獎及榮譽</h1>
+       <p>　</p>
+       <p>1952 自由中國美展版畫金牌獎</p>
+       <p>　</p>
+       <p>1973 中華民國畫學會版畫金牌獎</p>
+       <p>　</p>
+       <p>1978 獲中華民國版畫學會第二屆金璽獎</p>
+       <p>　</p>
+       <p>1991 獲哥斯大黎加國家美術館傑出藝術家獎</p>
+       <p>　</p>
+       <p>2007 國立台灣美術館舉行陳其茂藝術創作回顧展</p>
+    </section>
+    <section>
+        <h1>　</h1>
+    </section>
+    <section1>
+        <div class="row">
+        <div class="col-lg-12 col-md-12">
+        <h1>展出作品類別</h1>
+        </div>
+        </div>     
+    </section1>
+    <section>
+        <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <h1>木口木刻</h1></div>
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <img src="刮風了.jpg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-12">〈刮風了〉，1951</div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <p>木口板版面小適合精細刻法，台灣版畫家極少使用，陳其茂刻法細膩，表現深入，採用台灣民情風俗為題材。</p></div>            
+        </div>
+         <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <h1>抒情版畫</h1></div>
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <img src="貓與花.jpg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-12">〈貓與花的日子之四〉，1987</div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <p>陳其茂將貓、花、女人三者結合一起，發展為貓與花的日子系列，共九連作，每幅猶如一首小詩。</p></div>            
+        </div>
+         <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <h1>寫實版畫</h1></div>
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <img src="雪封長城.jpg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-12">〈雪封長城〉，1991</div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <p>作品裡所刻畫古老街道、建築或禽鳥，因為有了創作者對歷史及自然的沉思，使畫面不再只有視覺趣味。</p></div>            
+        </div>
+         <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <h1>油畫</h1></div>
+            <div class="col-lg-2 col-md-2 col-sm-12">
+                <img src="帶駱駝.jpg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-12">〈帶駱駝的人〉，1999</div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <p>油畫曾是陳其茂就讀美專時的主修課程，因此有份割捨不下的感情，在版畫創作的同時，油畫創作也未曾停歇。</p></div>            
+        </div>
+    </section>
+    <footer>
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <p>至善藝文中心：台北市士林區至善路二段250號　(02)28881777</p>            
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <p>「文化尋根‧建構台灣美術百年史」系列展覽歡迎您！</p>                              
+    </footer>
 </body>
 
 </html>
