--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-12">
-                <img src=url(https://walis0107.github.io/曉.jpg) alt="">
+                <img src="刮風了.jpg" alt="">
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12">
                 <h1>　</h1>
